--- a/static/Src/css/style.css
+++ b/static/Src/css/style.css
@@ -1,18 +1,26 @@
 .header img {
+
     float: left;
-    width: 140px;
+    width: 150px;
     height: 110px;
+
 }
   
 .header h1 {
+
     position: relative;
     top: 50px;
     left: 300px;
     font-size: 50px;
+
 }
 .page{
-  font-family: Arial, Helvetica, sans-serif;
+
+  font-family: Arial, garamond, sans-serif;
+
 }
 .page h2{
+
   font-size: 30px;
+  
 }
