--- a/views/Project.xml
+++ b/views/Project.xml
@@ -1,127 +1,121 @@
 <odoo>
-     
-       <record model="ir.ui.view" id="Project_form_view">
-          <field name="name">Project.form</field>
-          <field name="model">NaturalParks.Project</field>
-          <field name="arch" type="xml">
-              <form string="Project Form">
-                  <sheet>
-                     <group>
-                        <field name="name"/>
-                        <field name="Budget"/>
-                        <field name="SpeciesID"/>
-                        <field name="ResearchPerIDS"/>
-                        <field name="StartingDate"/>
-                        <field name="EndingDate"/>
-                     </group>
-                  </sheet>
-              </form>
-          </field>
-       </record>
-
-       <record model="ir.ui.view" id="Project_tree_view">
-          <field name="name">Project.tree</field>
-          <field name="model">NaturalParks.Project</field>
-          <field name="arch" type="xml">
-              <tree string="Project Tree">
-                        <field name="name"/>
-                        <field name="Budget"/>
-                        <field name="SpeciesID"/>
-                        <field name="ResearchPerIDS"/>
-                        <field name="StartingDate"/>
-                        <field name="EndingDate"/>               
-              </tree>
-          </field>
-       </record>
-
-       <record model="ir.ui.view" id="Project_list_action">
-          <field name="name">Project</field>
-          <field name="res_model">NaturalParks.Project</field>
-          <field name="view_mode">form,tree</field>
-          <field name="help" type="html">
-          </field>
-       </record>
-
-       <record model="ir.ui.view" id="Project_search_view">
-           <field name="name">Project.search</field>
-           <field name="model">NaturalParks.Project</field>
-           <field name="arch" type="xml">
-               <search>
-                   <field name="name"/>
-                   <group string="Group By">
-                       <filter name="by_Species" string="Species"
-                               context="{'group_by': 'SpeciesID'}"/>
-                   </group>
-               </search>
-           </field>
-       </record>
-
-       <record model="ir.ui.view" id="Project_graph_view">
-        <field name="name">Project.graph</field>
-        <field name="model">naturalparks.Project</field>
+    <record model="ir.ui.view" id="project_form_view">
+        <field name="name">project.form</field>
+        <field name="model">naturalparks.project</field>
         <field name="arch" type="xml">
-            <graph string="Projects">
-                <field name="name"/>
-                <field name="Budget" type="measure"/>
-            </graph>
+            <form string="Project Form">
+                <header>
+                    <button name="action_confirm" type="object" string="Confirm" states="1.draft" class="oe_highlight"/>
+                    <button name="action_done" type="object" string="Done" states="2.confirm" class="oe_highlight"/>
+                    <button name="action_draft" type="object"  string="Reset to draft" states="2.confirm,3.done" />
+                    <field name="state" widget="statusbar" statusbar_visible="1.draft,2.confirm,3.done" />
+                </header>
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="species_id"/>
+                        <field name="researchper_ids"/>
+                        <field name="budget" options='{"type": "number", "step": 1200}'/>
+                        <field name="starting_date"/>
+                        <field name="ending_date"/>
+                    </group>
+                </sheet>
+            </form>
         </field>
-       </record>
+    </record>
 
-       <record model="ir.ui.view" id="Project_kanban_view">
-           <field name="name">NaturalParks.Project.kanban</field>
-           <field name="model">NaturalParks.Project</field>
-           <field name="arch" type="xml">
-               <kanban default_group_by="state">
-                   <field name="Color"/>
-                   <templates>
-                       <t t-name="kanban-box">
-                           <div
-                                   t-attf-class="oe_kanban_Color_{{kanban_getColor(record.Color.raw_value)}}
-                                               oe_kanban_global_click_edit oe_semantic_html_override
-                                               oe_kanban_card {{record.group_fancy==1 ? 'oe_kanban_card_fancy' : ''}}">
-                               <div class="oe_dropdown_kanban">
-                                   <div class="oe_dropdown_toggle">
-                                       <i class="fa fa-bars fa-lg" title="Manage" aria-label="Manage"/>
-                                       <ul class="oe_dropdown_menu">
-                                           <li>
-                                               <a type="delete">Delete</a>
-                                           </li>
-                                           <li>
-                                               <ul class="oe_kanban_Colorpicker"
-                                                   data-field="Color"/>
-                                           </li>
-                                       </ul>
-                                   </div>
-                                   <div class="oe_clear"></div>
-                               </div>
-                               <div t-attf-class="oe_kanban_content">
-                                   Project Name:
-                                   <field name="name"/>
-                                   <br/>
-                                   Species:
-                                   <field name="SpeciesID"/>
-                                   <br/>
-                                   Starting Date:
-                                   <field name="StartingDate"/>
-                                   <br/>
-                                   Ending Date:
-                                   <field name="EndingDate"/>
+    <record model="ir.ui.view" id="project_tree_view">
+        <field name="name">project.tree</field>
+        <field name="model">naturalparks.project</field>
+        <field name="arch" type="xml">
+            <tree decoration-muted="state == '1.draft'" decoration-success="state == '2.confirm'" decoration-danger="state == '3.done'" string="Project Tree">
+                <field name="name"/>
+                <field name="species_id"/>
+                <field name="researchper_ids"/>
+                <field name="budget"/>
+                <field name="starting_date"/>
+                <field name="ending_date"/>
+                <field name="state"/>
+            </tree>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="project_kanban_view">
+        <field name="name">naturalparks.project.kanban</field>
+        <field name="model">naturalparks.project</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="state">
+                <field name="color"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div
+                                t-attf-class="oe_kanban_color_{{kanban_getcolor(record.color.raw_value)}}
+                                            oe_kanban_global_click_edit oe_semantic_html_override
+                                            oe_kanban_card {{record.group_fancy==1 ? 'oe_kanban_card_fancy' : ''}}">
+                            <div class="oe_dropdown_kanban">
+                                <div class="oe_dropdown_toggle">
+                                    <i class="fa fa-bars fa-lg" title="Manage" aria-label="Manage"/>
+                                    <ul class="oe_dropdown_menu">
+                                        <li>
+                                            <a type="delete">Delete</a>
+                                        </li>
+                                        <li>
+                                            <ul class="oe_kanban_colorpicker"
+                                                data-field="color"/>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="oe_clear"></div>
+                            </div>
+                            <div t-attf-class="oe_kanban_content">
+                                Project Name:
+                                <field name="name"/>
+                                <br/>
+                                Species:
+                                <field name="species_id"/>
+                                <br/>
+                                Starting Date:
+                                <field name="starting_date"/>
+                                <br/>
+                                Ending Date:
+                                <field name="ending_date"/>
+                                <br/>
+                                State:
+                                <field name="state"/>
                                 
-                                
-                               </div>
-                           </div>
-                       </t>
-                   </templates>
-               </kanban>
-           </field>
-       </record>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
 
-       
+    <record model="ir.actions.act_window" id="project_list_action">
+        <field name="name">Project</field>
+        <field name="res_model">naturalparks.project</field>
+        <field name="view_mode">tree,form,kanban</field>
+    </record>
 
+    <record model="ir.ui.view" id="project_search_view">
+        <field name="name">project.search</field>
+        <field name="model">naturalparks.project</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="name"/>
+                <filter name="high_budget" string="High Budget"
+                        domain="[('budget', '&gt;', 35000)]"/>
+                <filter name="low_budget" string="Low Budget"
+                        domain="[('budget', '&lt;', 35000)]"/>
+                <group string="Group By">
+                    <filter name="by_species" string="Species"
+                            context="{'group_by': 'species_id'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
 
-       <menuitem id="Project_menu" name="Project"
-         parent="ParkPersonal_menu"
-         action="Project_list_action"/>
-
+    <menuitem id="project_menu" name="Researchper Project"
+        parent="parkpersonal_menu"
+        action="project_list_action"/>
 </odoo>
-
